# bazel-frontend-test

./: BUILD.bazel  README.md  WORKSPACE  jest.bzl  jest.config.js  package-lock.json  package.json  tsconfig.json
add/: BUILD.bazel  add.test.ts  add.ts
app/: BUILD.bazel  app.tsx  index.html  index.tsx  rollup.config.js
component/: BUILD.bazel  index.test.tsx  index.tsx
lib/hello/: BUILD.bazel
patches/: jest-haste-map+26.6.2.patch
superadd/: BUILD.bazel  superadd.ts
