load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@npm//jest-cli:index.bzl", "jest_test")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "add",
    srcs = [
        "add.ts",
        "index.ts",
        # TODO: glob + exclude *.test.ts
    ],
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig.json",
)

ts_project(
    name = "test_lib",
    srcs = [
        "add.test.ts",
    ],
    tsconfig = "//:tsconfig.json",
    validate = False,
    deps = [
        ":add",
        "@npm//@types",
    ],
)

# TODO: provide a wrapper
jest_test(
    name = "test",
    args = [
        "--no-cache",
        "--no-watchman",
        "--ci",
        "--colors",
    ],
    data = [
        ":test_lib",
        "//:jest.config.js",
    ],
    tags = [
        "no-bazelci-mac",
        "no-bazelci-windows",
    ],
)
