load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("//:jest.bzl", "jest_test")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "add",
    srcs = glob(
        ["*.ts"],
        exclude = ["*.test.ts"],
    ),
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig.json",
)

ts_project(
    name = "test_lib",
    srcs = glob(["*.test.ts"]),
    tsconfig = "//:tsconfig.json",
    validate = False,
    deps = [
        ":add",
        "@npm//@types",
    ],
)

# TODO: provide a wrapper
jest_test(
    name = "test",
    target = ":test_lib",
)
