load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("@npm//jest-cli:index.bzl", "jest_test")

ts_project(
    name = "component",
    srcs = glob(
        [
            "*.ts",
            "*.tsx",
        ],
        exclude = [
            "*.test.ts",
            "*.test.tsx",
        ],
    ),
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        "//add",
        "@npm//@types",
        "@npm//react",
    ],
)

ts_project(
    name = "test_lib",
    srcs = glob([
        "*.test.ts",
        "*.test.tsx",
    ]),
    source_map = True,
    tsconfig = "//:tsconfig.json",
    validate = False,
    deps = [
        ":component",
        "@npm//@testing-library/jest-dom",
        "@npm//@testing-library/react",
    ],
)

jest_test(
    name = "test",
    args = [
        "--no-cache",
        "--no-watchman",
        "--ci",
        "--colors",
    ],
    data = [
        ":test_lib",
        "//:jest.config.js",
    ],
    tags = [
        "no-bazelci-mac",
        "no-bazelci-windows",
    ],
)
